# ESC_demo

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
configs/: esc_eval.yaml  model.yaml  rl_extes_grpo.yaml  sft_esconv.yaml
results/: baseline_eval.json  grpo_eval.json  samples.json  sft_eval.json
results/esc_eval/: dialogues_baseline_en.json  dialogues_sft_en.json  scores_baseline_en.json
scripts/: evaluate_model.py  process_data.py  run_esc_eval.py  run_grpo.py  run_sft.py  test_model.py  verify_data.py
src/data/: esconv.py  extes.py
src/eval/: __init__.py  esc_rank.py  esc_role.py  metrics.py
src/models/: qwen.wrapper.py  qwen_wrapper.py
src/rl/: __init__.py  reward_functions.py
src/training/: __init__.py  data_collator.py  grpo_trainer.py  sft_trainer.py
src/utils/: config.py  seed.py
