[project]
name = "esc-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "bert-score>=0.3.13",
    "bitsandbytes>=0.48.2",
    "datasets>=4.4.1",
    "nltk>=3.9.2",
    "peft>=0.18.0",
    "protobuf>=6.33.2",
    "pyyaml>=6.0.3",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.1",
    "tensorboard>=2.20.0",
    "torch",
    "torchvision",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "trl>=0.25.1",
    "wandb>=0.23.1",
]
